Changes for ritik's website

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <!-- 
     - primary meta tags
   -->
-  <title>Julia - I'm User Interface Designer & Developer.</title>
-  <meta name="title" content="Julia - I'm User Interface Designer & Developer.">
-  <meta name="description" content="This is a personal portfolio html template made by codewithsadee">
+  <title>Ritik - I'm an SDE with experience in Full Stack Development and AI, deeply passionate about AI/ML.</title>
+  <meta name="title" content="Ritik - I'm an SDE with experience in Full Stack Development and AI, deeply passionate about AI/ML.">
+  <meta name="description" content="This is a personal portfolio html template">
 
   <!-- 
     - favicon
@@ -47,9 +47,7 @@
   <header class="header" data-header>
     <div class="container">
 
-      <a href="#" class="logo">
-        <img src="./assets/images/logo-dark.svg" width="64" height="24" alt="Julia home">
-      </a>
+      <text class="logo-css">Ritik</text>
 
       <nav class="navbar" data-navbar>
 
@@ -70,19 +68,19 @@
           </li>
 
           <li>
-            <a href="#" class="navbar-link">About</a>
+            <a href="#about" class="navbar-link">About</a>
           </li>
 
           <li>
-            <a href="#" class="navbar-link">Projects</a>
+            <a href="#projects" class="navbar-link">Projects</a>
           </li>
 
           <li>
-            <a href="#" class="navbar-link">Blog</a>
+            <a href="#" class="navbar-link">Certifications</a>
           </li>
 
           <li>
-            <a href="#" class="navbar-link">Contact</a>
+            <a href="#contact" class="navbar-link">Contact</a>
           </li>
 
         </ul>
@@ -95,33 +93,36 @@
 
         <ul class="social-list">
 
+        <ul class="social-list">
+
           <li>
-            <a href="#" class="social-link">
-              <ion-icon name="logo-twitter"></ion-icon>
+            <a href="https://github.com/RitikPadhy" class="social-link">
+              <ion-icon name="logo-github"></ion-icon>
             </a>
           </li>
 
           <li>
-            <a href="#" class="social-link">
-              <ion-icon name="logo-facebook"></ion-icon>
+            <a href="https://www.linkedin.com/in/ritikp30/" class="social-link">
+              <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
 
           <li>
-            <a href="#" class="social-link">
-              <ion-icon name="logo-dribbble"></ion-icon>
+            <a href="https://leetcode.com/u/RITIKP/" class="social-link">
+              <i class="fas fa-code" style="font-size: 16px;"></i>
+
             </a>
           </li>
 
           <li>
-            <a href="#" class="social-link">
+            <a href="https://www.instagram.com/ritik._.padhy/" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
           </li>
 
           <li>
-            <a href="#" class="social-link">
-              <ion-icon name="logo-youtube"></ion-icon>
+            <a href="https://x.com/RitikKumar96279" class="social-link">
+              <i class="fab fa-x-twitter"></i>
             </a>
           </li>
 
@@ -153,7 +154,7 @@
         <div class="container">
 
           <figure class="hero-banner">
-            <img src="./assets/images/hero-banner.jpg" width="560" height="540" alt="Julia" class="w-100"
+            <img src="./assets/images/formal_pictureHD.png" alt="Ritik" class="w-100"
               data-reveal="top">
 
             <img src="./assets/images/hero-shape.svg" width="203" height="91" alt="250+ Projects Done" class="shape"
@@ -163,18 +164,18 @@
           <div class="hero-content">
 
             <h1 class="h1 hero-title" data-reveal="top" data-reveal-delay="0.5s">
-              I'm User Interface Designer & Developer.
+              I'm Full Stack Developer & AI Enthusiast
             </h1>
 
             <p class="section-text" data-reveal="top" data-reveal-delay="0.75s">
-              Hello! I'm Julia, a freelance user interface designer & developer based in London. I’m very passionate
+              Hello! I'm Ritik, a full stack developer & AI enthusiast based in Bengaluru. I’m very passionate
               about the work that I do.
             </p>
 
             <div class="btn-wrapper" data-reveal="top" data-reveal-delay="1s">
-              <a href="#" class="btn btn-primary">See My Works</a>
+              <a href="#projects" class="btn btn-primary">See My Works</a>
 
-              <a href="#" class="btn btn-secondary">Contact Me</a>
+              <a href="#contact" class="btn btn-secondary">Contact Me</a>
             </div>
 
           </div>
@@ -190,7 +191,7 @@
         - #ABOUT
       -->
 
-      <section class="section about" aria-label="about">
+      <section class="section about" id="about" aria-label="about">
         <div class="container">
 
           <div class="wrapper">
@@ -199,9 +200,7 @@
               <h2 class="h2 section-title">What I Do?</h2>
 
               <p class="section-text">
-                Duis mollis est commodo luctus nisi erat porttitor ligula, eget lacinia odio sem nec elit. Nullam quis
-                risus eget urna mollis ornare vel. Nulla vitae elit libero, a pharetra augue. Praesent commodo cursus
-                magna, vel scelerisque nisl.
+                I'm a Software Engineer specializing in Full Stack Development, AI, and Software Testing. I focus on QA automation, improving test coverage, and ensuring product reliability. I also have experience building scalable web applications using React.js, Node.js, and MongoDB, and optimizing APIs for better performance. In my past work, I've contributed to AI-driven projects, automation, and Web3 applications, enhancing efficiency and user engagement. I enjoy solving complex problems, streamlining workflows, and developing high-performance solutions that make an impact.
               </p>
             </div>
 
@@ -212,11 +211,11 @@
                 <div class="label-wrapper">
                   <p>Web Design</p>
 
-                  <span class="span">100 %</span>
+                  <span class="span">90 %</span>
                 </div>
 
                 <div class="progress">
-                  <div class="progress-fill" style="width: 100%; background-color: #c7b1dd"></div>
+                  <div class="progress-fill" style="width: 90%; background-color: #c7b1dd"></div>
                 </div>
 
               </li>
@@ -224,7 +223,7 @@
               <li class="progress-item">
 
                 <div class="label-wrapper">
-                  <p>Mobile Design</p>
+                  <p>Backend Development</p>
 
                   <span class="span">80 %</span>
                 </div>
@@ -238,13 +237,13 @@
               <li class="progress-item">
 
                 <div class="label-wrapper">
-                  <p>Development</p>
+                  <p>AI</p>
 
-                  <span class="span">85 %</span>
+                  <span class="span">65 %</span>
                 </div>
 
                 <div class="progress">
-                  <div class="progress-fill" style="width: 85%; background-color: #b0d4c1"></div>
+                  <div class="progress-fill" style="width: 65%; background-color: #b0d4c1"></div>
                 </div>
 
               </li>
@@ -252,7 +251,7 @@
               <li class="progress-item">
 
                 <div class="label-wrapper">
-                  <p>SEO</p>
+                  <p>Software Testing</p>
 
                   <span class="span">90 %</span>
                 </div>
@@ -273,14 +272,13 @@
               <div class="about-card">
 
                 <div class="card-icon">
-                  <img src="./assets/images/icon-1.svg" width="52" height="52" loading="lazy" alt="web design icon">
+                  <img src="./assets/images/icon-1.svg" width="48" height="52" loading="lazy" alt="web design icon">
                 </div>
 
                 <h3 class="h4 card-title">Web Design</h3>
 
                 <p class="card-text">
-                  Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus. Cras
-                  justo cum sociis natoque magnis.
+                  I have designed and built responsive, user-friendly websites using HTML, CSS, JS, and React.js. My work on scalable and visually appealing interfaces showcases my strong expertise in web design.
                 </p>
 
               </div>
@@ -290,14 +288,13 @@
               <div class="about-card">
 
                 <div class="card-icon">
-                  <img src="./assets/images/icon-2.svg" width="52" height="52" loading="lazy" alt="mobile design icon">
+                  <img src="./assets/images/coding.png" width="52" height="52" loading="lazy" alt="web design icon">
                 </div>
 
-                <h3 class="h4 card-title">Mobile Design</h3>
+                <h3 class="h4 card-title">Backend Development</h3>
 
                 <p class="card-text">
-                  Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus. Cras
-                  justo cum sociis natoque magnis.
+                  I have built scalable and efficient backend systems using Node.js, Express.js, and MongoDB, ensuring smooth API integration, performance optimization, and secure database management.
                 </p>
 
               </div>
@@ -307,15 +304,14 @@
               <div class="about-card">
 
                 <div class="card-icon">
-                  <img src="./assets/images/icon-3.svg" width="52" height="52" loading="lazy"
+                  <img src="./assets/images/software-application.png" width="52" height="52" loading="lazy"
                     alt="web development icon">
                 </div>
 
-                <h3 class="h4 card-title">Development</h3>
+                <h3 class="h4 card-title">Artifical Intelligence</h3>
 
                 <p class="card-text">
-                  Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus. Cras
-                  justo cum sociis natoque magnis.
+                  I have developed an AI agent and worked on various machine learning projects, applying automation and data-driven techniques to improve accuracy, efficiency, and user engagement. 
                 </p>
 
               </div>
@@ -325,14 +321,13 @@
               <div class="about-card">
 
                 <div class="card-icon">
-                  <img src="./assets/images/icon-4.svg" width="52" height="52" loading="lazy" alt="web seo icon">
+                  <img src="./assets/images/testing.png" width="52" height="52" loading="lazy" alt="web seo icon">
                 </div>
 
-                <h3 class="h4 card-title">SEO</h3>
+                <h3 class="h4 card-title">Software Testing</h3>
 
                 <p class="card-text">
-                  Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus. Cras
-                  justo cum sociis natoque magnis.
+                  I have automated 4,000+ test cases, significantly improving test coverage, efficiency, and reliability. My experience in API and UI testing ensures high product quality and faster deployments.
                 </p>
 
               </div>
@@ -351,7 +346,7 @@
         - #PROJECT
       -->
 
-      <section class="section project" aria-labelledby="project-label">
+      <section class="section project" id="projects" aria-labelledby="project-label">
         <div class="container">
 
           <div class="title-wrapper" data-reveal="top">
@@ -364,7 +359,7 @@
               </p>
             </div>
 
-            <a href="#" class="btn btn-secondary">See All Projects</a>
+            <a href="https://github.com/RitikPadhy" class="btn btn-secondary">See All Projects</a>
 
           </div>
 
@@ -503,7 +498,7 @@
         - #CONTACT
       -->
 
-      <section class="section contact" aria-label="contact">
+      <section class="section contact" id="contact" aria-label="contact">
         <div class="container">
 
           <div class="contact-card">
@@ -523,18 +518,16 @@
 
             </div>
 
-            <form action="" class="contact-form" data-reveal="right">
+            <form action="https://formsubmit.co/ritikp2002@gmail.com" method="POST" class="contact-form">
 
               <div class="input-wrapper">
-                <input type="text" name="name" placeholder="Name *" required class="input-field">
-
-                <input type="email" name="email_address" placeholder="Email *" required class="input-field">
+                  <input type="text" name="name" placeholder="Name *" required class="input-field">
+                  <input type="email" name="email" placeholder="Email *" required class="input-field">
               </div>
 
               <textarea name="message" placeholder="Message *" required class="input-field"></textarea>
 
               <button type="submit" class="btn btn-secondary">Send message</button>
-
             </form>
 
           </div>
@@ -557,38 +550,39 @@
     <div class="container">
 
       <p class="copyright">
-        © 2022 codewithsadee. All rights reserved.
+        © 2025 All rights reserved.
       </p>
 
       <ul class="social-list">
 
         <li>
-          <a href="#" class="social-link">
-            <ion-icon name="logo-twitter"></ion-icon>
+          <a href="https://github.com/RitikPadhy" class="social-link">
+            <ion-icon name="logo-github"></ion-icon>
           </a>
         </li>
 
         <li>
-          <a href="#" class="social-link">
-            <ion-icon name="logo-facebook"></ion-icon>
+          <a href="https://www.linkedin.com/in/ritikp30/" class="social-link">
+            <ion-icon name="logo-linkedin"></ion-icon>
           </a>
         </li>
 
         <li>
-          <a href="#" class="social-link">
-            <ion-icon name="logo-dribbble"></ion-icon>
+          <a href="https://leetcode.com/u/RITIKP/" class="social-link">
+            <i class="fas fa-code" style="font-size: 16px;"></i>
+
           </a>
         </li>
 
         <li>
-          <a href="#" class="social-link">
+          <a href="https://www.instagram.com/ritik._.padhy/" class="social-link">
             <ion-icon name="logo-instagram"></ion-icon>
           </a>
         </li>
 
         <li>
-          <a href="#" class="social-link">
-            <ion-icon name="logo-youtube"></ion-icon>
+          <a href="https://x.com/RitikKumar96279" class="social-link">
+            <i class="fab fa-x-twitter"></i>
           </a>
         </li>
 
@@ -600,7 +594,7 @@
 
 
 
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   <!-- 
     - custom js link
   -->
